# openstudy

./: .env.example  .env.prod.example  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026-02-19_innit.py  2026-03-11_remove_webhooks.py  2026-03-17_create_room_table.py  2026-03-18_create_all_tables.py
backend/app/: admin.py  main.py
backend/app/api/: deps.py  exception_handlers.py
backend/app/api/routes/v1/: __init__.py  attempts.py  bookmarks.py  goals.py  notes.py  quizzes.py  resources.py  rooms.py  study_sessions.py  subjects.py
backend/app/clients/: openai_client.py
backend/app/core/: cache.py  config.py
backend/app/db/models/: __init__.py  attempt.py  bookmark.py  daily_goal.py  leaderboard.py  note.py  qa_session.py  question.py  quiz.py  resource.py  room.py  room_member.py  study_session.py  subject.py  user.py
backend/app/repositories/: __init__.py  attempt.py  bookmark.py  daily_goal.py  leaderboard.py  note.py  qa_session.py  question.py  quiz.py  resource.py  room.py  room_member.py  study_session.py  subject.py
backend/app/schemas/: __init__.py  attempt.py  bookmark.py  daily_goal.py  leaderboard.py  note.py  qa_session.py  question.py  quiz.py  resource.py  room.py  study_session.py  subject.py
backend/app/services/: __init__.py  attempt.py  bookmark.py  goal.py  leaderboard.py  note.py  qa.py  question.py  quiz.py  resource.py  room.py  room_member.py  study_session.py  subject.py  timer.py
backend/app/worker/: celery_app.py
backend/app/worker/tasks/: resource_tasks.py  room_tasks.py
backend/cli/: commands.py
backend/tests/: test_core.py  test_repositories.py  test_services.py  test_worker.py
backend/tests/api/: test_auth.py
docs/: AI_INTEGRATION_GUIDE.md  adding_features.md
kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml
monitoring/grafana/dashboards/: fastapi-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/prometheus/: prometheus.yml
