[project]
name = "openclew"
version = "0.1.0"
description = "My FastAPI project"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "chandan0000", email = "kumarchandan41u@gmail.com" }]

dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "orjson>=3.11.7",
    "sqlalchemy[asyncio]>=2.0.48",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.11",
    "alembic>=1.18.4",
    "greenlet>=3.3.2",
    "pyjwt>=2.11.0",
    "bcrypt>=5.0.0",
    "python-multipart>=0.0.22",
    "authlib>=1.6.9",
    "httpx>=0.27.0",
    "redis>=6.4.0",
    "fastapi-cache2>=0.2.2",
    "slowapi>=0.1.9",
    "fastapi-pagination>=0.15.10",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "sqladmin>=0.23.0",
    "itsdangerous>=2.2.0",
    "celery[redis]>=5.6.2",
    "flower>=2.0.1",
    "boto3>=1.42.65",
    "pdfplumber>=0.11.0",
    "httpx>=0.28.1",
    "click>=8.3.1",
    "tabulate>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "anyio[trio]>=4.0.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
openclew = "cli.commands:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "cli"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (needed for FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["app", "cli"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.fastapi-fullstack]
generator_version = "0.1.18"
generated_at = "2026-02-17T18:18:39.415646+00:00"
